--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit>=1.18.0
-librosa>=0.9.2
-numpy>=1.21.0
-joblib>=1.2.0
-matplotlib>=3.5.0
+streamlit
+librosa
+numpy
+joblib
+matplotlib
+requests
