--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.35.0
-librosa==0.10.0.post2
-matplotlib
-numpy
-joblib
-requests
+librosa==0.10.1
+matplotlib==3.7.1
+numpy==1.24.4
+requests==2.31.0
+joblib==1.3.2
+scikit-learn==1.3.2
